# DF2Mod

./: .gitignore  CMakeLists.txt  README.md
code/: CMakeLists.txt
code/cgame/: cg_draw.cpp  cg_ents.cpp  cg_local.h  cg_main.cpp  cg_players.cpp  cg_public.h  cg_view.cpp  cg_weapons.cpp
code/client/: cl_cgame.cpp  cl_cin.cpp  cl_console.cpp  cl_input.cpp  cl_keys.cpp  cl_main.cpp  cl_mp3.cpp  cl_scrn.cpp  snd_ambient.cpp  snd_dma.cpp
code/game/: AI_Jedi.cpp  CMakeLists.txt  NPC.cpp  NPC_spawn.cpp  bg_physics.cpp  bg_physics.h  bg_pmove.cpp  bg_public.h  g_active.cpp  g_breakable.cpp  g_client.cpp  g_cmds.cpp  g_fx.cpp  g_local.h  g_main.cpp  g_mem.cpp  g_misc_model.cpp  g_mover.cpp  g_phys.cpp  g_physics.cpp  g_public.h  g_shared.h  g_spawn.cpp  g_utils.cpp  wp_saber.cpp
code/newton/: changeList.txt
code/newton/dAnimation/: dAnimationClip.cpp  dAnimationClip.h  dAnimationStdAfx.h  dAnimation_2003.vcproj  dAnimation_2009.vcproj  dBone.cpp  dBone.h  dBonesToPoseBinding.cpp  dBonesToPoseBinding.h  dMesh.cpp  dMesh.h  dModel.cpp  dModel.h  dPoseGenerator.cpp  dPoseGenerator.h
code/newton/dContainers/: dContainers_2003.vcproj  dContainers_2009.vcproj
code/newton/dCustomJoints/: CustomBasicRayCastCar.cpp  JointLibrary_2003.vcproj  JointLibrary_2009.vcproj
code/newton/dMath/: dMath_2003.vcproj  dMath_2009.vcproj
code/newton/sdkProjects/: sdkBuild_2003.sln  sdkBuild_2008.sln
code/phys/: phys_bullet.cpp  phys_public.h
code/qcommon/: cm_load.cpp  cm_local.h  cm_patch.cpp  cm_patch.h  cm_phys.cpp  cm_public.h  cmd.cpp  common.cpp  cvar.cpp  files.cpp  net_chan.cpp  q_shared.h  qcommon.h  qfiles.h  stringed_ingame.cpp  sync.h  z_memman_pc.cpp
code/rd-common/: tr_image_stb.cpp  tr_public.h
code/rd-gl1/: G2_misc.cpp  tr_init.cpp  tr_local.h  tr_main.cpp  tr_mesh.cpp  tr_model.cpp  tr_scene.cpp  tr_surface.cpp
code/rd-gl2/: G2_API.cpp  G2_misc.cpp  tr_decals.cpp  tr_image.cpp  tr_init.cpp  tr_local.h  tr_scene.cpp  tr_shader.cpp
code/rd-gl2/glsl/: prepass.glsl  surface_sprites.glsl
code/rd-gl2/imgui_docks_openjk/: dock_shadereditor.cpp
code/rd-vulkan/: CMakeLists.txt  G2_API.cpp  G2_bolts.cpp  G2_bones.cpp  G2_misc.cpp  G2_surfaces.cpp  tr_WorldEffects.cpp  tr_backend.cpp  tr_bsp.cpp  tr_cmds.cpp  tr_curve.cpp  tr_ghoul2.cpp  tr_image.cpp  tr_init.cpp  tr_light.cpp  tr_local.h  tr_main.cpp  tr_mesh.cpp  tr_model.cpp  tr_scene.cpp  tr_shader.cpp  tr_skin.cpp  tr_subs.cpp  tr_surface.cpp  tr_world.cpp  vk_image.cpp  vk_image_process.cpp  vk_init.cpp  vk_shade_geometry.cpp  vk_vbo.cpp
code/server/: sv_ccmds.cpp  sv_game.cpp  sv_init.cpp
code/ui/: ui_public.h
lib/bullet3/lib/: Bullet3Collision.lib  Bullet3Collision_Debug.lib  Bullet3Common.lib  Bullet3Common_Debug.lib  Bullet3Dynamics.lib  Bullet3Dynamics_Debug.lib  Bullet3Geometry.lib  Bullet3Geometry_Debug.lib  Bullet3OpenCL_clew.lib  BulletCollision.lib  BulletDynamics.lib  BulletInverseDynamics.lib  BulletInverseDynamics_Debug.lib  BulletSoftBody.lib  BulletSoftBody_Debug.lib  LinearMath.lib  LinearMath_Debug.lib
shared/qcommon/: q_math.c  q_math.h  q_math2.h
shared/sdl/: sdl_input.cpp  sdl_sound.cpp  sdl_window.cpp
shared/sys/: sys_main.cpp  sys_public.h  sys_win32.cpp
